--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,7 +112,7 @@ body {
 	text-transform: uppercase;
 	color: $accent-color;
 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-	border: none;
+	text-decoration: none;
 	font-size: 20px;
 	line-height: 1.35;
 	@include trans(background-color);
